Remove unused code and drop unnecessary dependencies
Cuts back on dependencies that are no necessary because they're either unused, or used for things that the stdlib can trivially offer. Removes ~10MB worth of baggage for the apiserver distribution.

Signed-off-by: nscuro <nscuro@protonmail.com>